Fixed icons for git pages.  Cropped landing image.

--- a/css/landing.css
+++ b/css/landing.css
@@ -36,7 +36,7 @@
       inline-size: 100%;
       block-size: 100%;
       background: rgba(0, 0, 0, 0.5);
-      background: url('../img/hero/lake-mcdonald.webp'); 
+      background: url('../img/hero/lake-mcdonald.jpg'); 
       /* background: linear-gradient(to top, rgba(0,0,0,0.1), rgba(0,0,0,0.4)), url('../img/hero/lake-mcdonald.webp') no-repeat; */
       
       background-size: cover; 
